--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="last_name">Nom</string>
     <string name="first_name">Prénoms</string>
     <string name="email">Email</string>
+    <string name="title_activity_create_person">CreatePersonActivity</string>
+    <string name="save">Enregistrer</string>
 </resources>
